# cmake_packages

./: CMakeLists.txt  README.md  compile.sh
cmake/: Findxdrfile.cmake  findHomebrewOpenMP.cmake
src/: CMakeLists.txt
src/driver/: CMakeLists.txt  main.cpp
src/foo/: CMakeLists.txt  Foo.cpp  Foo.h  FooConfig.cmake.in  FooPrivateHeader.h  foo.cpp
src/foo/cmake/: FooConfig.cmake  FooConfig.cmake.in  fooConfig.cmake
